Fixed variable name and trask icon alignment

--- a/client/src/components/Todo/Todo.css
+++ b/client/src/components/Todo/Todo.css
@@ -10,6 +10,7 @@
 
 .Todo .text {
     line-height: 1.8;
+    width: 82%;
 }
 
 .Todo button {
